Create view Phone

--- a/PhoneBook_24/PhoneBook_24.csproj
+++ b/PhoneBook_24/PhoneBook_24.csproj
@@ -194,6 +194,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Contacts\Index.cshtml" />
     <Content Include="Views\Contacts\Add.cshtml" />
+    <Content Include="Views\Contacts\PhoneNumber.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
